@@ -24,10 +24,10 @@ gnome = import('gnome')
 compiler = meson.get_compiler('c')
 # TODO: all dependencies have to be defined here globally
 gtk_dependency = dependency('gtk+-3.0')
-glib_dependency = dependency('glib-2.0', version: '>= 2.58.0')
-gobject_dependency = dependency('gobject-2.0', version: '>= 2.58.0')
-gthread_dependency = dependency('gthread-2.0', version: '>= 2.58.0')
-gio_dependency = dependency('gio-2.0', version: '>= 2.58.0')
+glib_dependency = dependency('glib-2.0', version: '>= 2.56.0')
+gobject_dependency = dependency('gobject-2.0', version: '>= 2.56.0')
+gthread_dependency = dependency('gthread-2.0', version: '>= 2.56.0')
+gio_dependency = dependency('gio-2.0', version: '>= 2.56.0')
 cunit_dependency = dependency('cunit')
 xml2_dependency = dependency('libxml-2.0')
 soup_dependency = dependency('libsoup-2.4')
